--- a/mystyle.css
+++ b/mystyle.css
@@ -5,9 +5,62 @@ body {
 .box {
     width: 180px;
     inline-size: 4.76cm;
-    height: lh;
-    block-size: lh;
+    height: 3.6em;
+    block-size: 3.6em;
     margin: ex;
     padding: .5cm;
     border: .3vmin solid black;
+}
+
+.box.secondary {
+    width: 220px;
+    height: 6em;
+    margin-top:0px;
+    margin-bottom:10px;
+    margin-left:0px;
+    margin-right:10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+
+    border-top-color: purple;
+    border-top-style:dashed;
+    border-top-width: .5vmin;
+    border-top-right-radius: 50px;
+
+    border-bottom-color: pink;
+    border-bottom-style:groove;
+    border-bottom-width: .5vmin;
+    border-bottom-left-radius: 10px;
+
+    border-left-color: blue;
+    border-left-style:groove;
+    border-left-width: 2vmin;
+    border-top-left-radius: 10px;
+
+    border-right-color: cyan;
+    border-right-style:solid;
+    border-right-width: .5vmin;
+    border-bottom-right-radius: 10px;
+}
+
+.box.third {
+    width: 220px;
+    height: 4em;
+    margin-top:0px;
+    margin-bottom:0px;
+    margin-left:0px;
+    margin-right:10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 100px;
+    padding-right: 0px;
+
+    border-color: purple;
+    border-style:solid;
+    border-width: .5vmin;
+    border-radius: 10px;
+
+
 }
