Adjusted the send button for the form Turns yellow when hovered, green when clicked

--- a/mystyle.css
+++ b/mystyle.css
@@ -76,3 +76,11 @@ body {
 #picture_move {
     position: static;
 }
+
+button:hover {
+    background-color:yellow;
+}
+
+button:active {
+    background-color:green;
+}
