--- a/mystyle.css
+++ b/mystyle.css
@@ -138,3 +138,10 @@ block {
     grid-column-start: 3;
     grid-column-end: 4;
 }
+
+@media screen and (max-width: 1000px) {
+    p {
+        font-size: 20px;
+    }
+    
+}
