--- a/mystyle.css
+++ b/mystyle.css
@@ -155,3 +155,22 @@ h2,
 h3 {
     font-style: oblique;
 }
+
+
+
+ol li {
+    list-style-type:decimal
+}
+
+ul > li {
+    list-style-type:circle
+}
+
+h3 + p {
+    color:brown
+}
+
+p ~ p {
+    font-size: 12px;
+    color:red
+}
